--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sophmore Portfolio </title>
+<title> Sophmore Portfolio </title>
   <link rel= "stylesheet" href="style.css">
 </head>
 <body>
-
-<h1> </h1>
-<p> </p>
+<h1> Sophmore Portfolio </h1>
+<p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison Highschool. I am 15 years old and my birthday falls on September 15th. My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
 
 </body>
 </html>
