--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <h1> Sophmore Portfolio </h1>
-<p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison Highschool. I am 15 years old and my birthday falls on September 15th. My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
+<p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison Highschool. I am 15 years old and my birthday falls on September 15th. </p>
+<p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
 
 </body>
 </html>
