name index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1> Sophmore Portfolio </h1>
+<h1> Saima's Portfolio </h1>
   <link rel= "stylesheet" href="style.css">
 </head>
 <body>
