headings index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1> Saima's Portfolio </h1>
   <link rel= "stylesheet" href="style.css">
 </head>
 <body>
+  <h1> Saima's Portfolio </h1>
 <p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison Highschool. I am 15 years old and my birthday falls on September 15th. </p>
 <p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
 <img src= "bow.png" alt= "ribbon bow">
-  <h2> Lesson 5 Mini Lesson ~  </h2>
+  <h2> Projects ~  </h2>
   <p><a href="https://saimassa.github.io/lesson5_activity.html/" "target="_blank"> Lesson 5 Mini Project </a></p>
 </body>
 </html>
