--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison Highschool. I am 15 years old and my birthday falls on September 15th. </p>
 <p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
 <img src= "bow.png" alt= "ribbon bow">
-  <h2> Projects ~  </h2>
-  <p><a href="https://saimassa.github.io/lesson5_activity.html/" "target="_blank"> Lesson 5 Mini Project </a></p>
+  <h3> Projects ~  </h3>
+  <p><a href="https://saimassa.github.io/lesson5_activity.html/" target="_blank"> Lesson 5 Mini Project </a></p>
 </body>
 </html>
