project description lesson 5 index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <img src= "bow.png" alt= "ribbon bow">
   <h3> Projects ˚ʚ♡ɞ˚  </h3>
   <p><a href="https://saimassa.github.io/lesson5_activity.html/" target="_blank">Lesson 5 Mini Project</a></p>
-  
+  <p> Lesson 5 Mini Project is about designing a web page for Kiri's Restaurant based on her preferences. </p>
+  <p> I was given a task to decorate her website with CSS and format her menu, reviews, information inside the web page. Take a look ! </p>
   
 </body>
 </html>
