--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <h1> Saima's Portfolio ˚ʚ♡ɞ˚ </h1>
 <p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison Highschool. I am 15 years old and my birthday falls on September 15th. </p>
 <p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
-  <h2> Hobbies ˚ʚ♡ɞ˚  </h2>
+  <h3> Hobbies ˚ʚ♡ɞ˚ </h3>
   <ul>
     <li> I like to go outside and play badminton with my friends. </li>
     <li> I love to go shopping on the weekends. </li>
     <li> On my free time, I read books or go to the library so I can read in peace.  </li>
     <li> I love watching shows especially kdramas and cdramas. </li>
-    <li> I like to play dress up, fighting and adventure games on my pc. </li>
+    <li> I usually watch movies and take care of myself on fridays. </li>
+    <li> I like to play dress up, fighting and adventure games on my personal computer. </li>
     <li> I spend time with my little siblings everyday and take care of them. </li>
   </ul>
 <img src= "bow.png" alt= "ribbon bow">
