--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1> Saima's Portfolio ˚ʚ♡ɞ˚ </h1>
-<p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison Highschool. I am 15 years old and my birthday falls on September 15th. </p>
+<p> Hi, my name is Saima Athai. I am a Sophmore at Thomas A Edison High School. I am 15 years old and my birthday falls on September 15th. </p>
 <p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
   <h3> Hobbies ˚ʚ♡ɞ˚ </h3>
   <ul>
@@ -13,7 +13,7 @@
     <li> I love to go shopping on the weekends. </li>
     <li> On my free time, I read books or go to the library so I can read in peace.  </li>
     <li> I love watching shows especially kdramas and cdramas. </li>
-    <li> I usually watch movies and take care of myself on fridays. </li>
+    <li> I usually watch movies and take care of myself on Fridays. </li>
     <li> I like to play dress up, fighting and adventure games on my personal computer. </li>
     <li> I spend time with my little siblings everyday and take care of them. </li>
   </ul>
@@ -21,7 +21,7 @@
   <h3> Projects ˚ʚ♡ɞ˚  </h3>
   <p><a href="https://saimassa.github.io/lesson5_activity.html/" target="_blank">Lesson 5 Mini Project</a></p>
   <p> Lesson 5 Mini Project is about designing a web page for Kiri's Restaurant based on her preferences. </p>
-  <p> I was given a task to decorate her website with CSS and format her menu, reviews, information inside the web page. Take a look ! </p>
+  <p> I was given a task to decorate her website with CSS and format her menu, reviews, information inside the web page. Take a look 🎧ྀི! </p>
   
 </body>
 </html>
