link for thomas edison index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1> Saima's Portfolio ˚ʚ♡ɞ˚ </h1>
-<p> Hi, my name is Saima Athai. I am a sophmore at Thomas A Edison High School. I am 15 years old and my birthday falls on September 15th. </p>
+<p> Hi, my name is Saima Athai. I am a sophmore at <a href="https://www.taehs.org/" target="_blank">Thomas A Edison High School </a>. I am 15 years old and my birthday falls on September 15th. </p>
 <p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
   <h3> Hobbies ˚ʚ♡ɞ˚ </h3>
   <ul>
