--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1> Saima's Portfolio ˚ʚ♡ɞ˚ </h1>
-<p> Hi, my name is Saima Athai. I am a sophmore at <a href="https://www.taehs.org/" target="_blank">Thomas A Edison High School </a>. I am 15 years old and my birthday falls on September 15th. </p>
+<p> Hi, my name is Saima Athai. I am a sophomore at <a href="https://www.taehs.org/" target="_blank">Thomas A Edison High School </a>. I am 15 years old and my birthday falls on September 15th. </p>
 <p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
   <h3> Hobbies ˚ʚ♡ɞ˚ </h3>
   <ul>
@@ -20,8 +20,6 @@
 <img src= "bow.png" alt= "ribbon bow">
   <h3> Projects ˚ʚ♡ɞ˚  </h3>
   <p><a href="https://saimassa.github.io/lesson5_activity.html/" target="_blank">Lesson 5 Mini Project</a></p>
-  <p> Lesson 5 Mini Project is about designing a web page for Kiri's Restaurant based on her preferences. </p>
-  <p> I was given a task to decorate her website with CSS and format her menu, reviews, information inside the web page. Take a look 🎧ྀི! </p>
-  
+  <p> Lesson 5 Mini Project is about designing a web page for Kiri's Restaurant based on her preferences. <br> I was given a task to decorate her website with CSS and format her menu, reviews, information inside the web page. Take a look 🎧ྀི! </p>
 </body>
 </html>
