--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 </head>
 <body>
   <h1> Saima's Portfolio ˚ʚ♡ɞ˚ </h1>
-<p> Hi, my name is Saima Athai. I am a sophomore at <a href="https://www.taehs.org/" target="_blank">Thomas A Edison High School </a>. I am 15 years old and my birthday falls on September 15th. </p>
-<p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. </p>
+<p> Hi, my name is Saima Athai. I am a sophomore at <a href="https://www.taehs.org/" target="_blank">Thomas A Edison High School </a>. I am 15 years old and my birthday falls on September 15th. ⋆｡‧˚ʚ🍓ɞ˚‧｡⋆ </p>
+<p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. ˚˖𓍢ִ໋🦢˚ </p>
   <h3> Hobbies ˚ʚ♡ɞ˚ </h3>
   <ul>
-    <li> I like to go outside and play badminton with my friends. </li>
-    <li> I love to go shopping on the weekends. </li>
-    <li> On my free time, I read books or go to the library so I can read in peace.  </li>
-    <li> I love watching shows especially kdramas and cdramas. </li>
-    <li> I usually watch movies and take care of myself on Fridays. </li>
-    <li> I like to play dress up, fighting and adventure games on my personal computer. </li>
-    <li> I spend time with my little siblings everyday and take care of them. </li>
+    <li> I like to go outside and play badminton with my friends. ִֶָ𓂃 ࣪˖ ִֶָ🐇་༘࿐ </li>
+    <li> I love to go shopping on the weekends. ‧₊˚ ☁️⋅♡🪐༘⋆</li>
+    <li> On my free time, I read books or go to the library so I can read in peace. ༘⋆♡⸝⸝💌⊹。°˖➴ </li>
+    <li> I love watching shows especially kdramas and cdramas. ˚˖𓍢ִ໋🌷͙֒✧˚.🎀༘⋆ </li>
+    <li> I usually watch movies and take care of myself on Fridays. ˖°𓇼🌊⋆🐚🫧  </li>
+    <li> I like to play dress up, fighting and adventure games on my personal computer. 🤍 </li>
+    <li> I spend time with my little siblings everyday and take care of them. 𐙚 ˚🍰 ⋆｡˚ ᡣ𐭩 </li>
   </ul>
    <img src= "bow.png" alt= "ribbon bow">
   <h3> Projects ˚ʚ♡ɞ˚  </h3>
