--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
   <h3> Projects ˚ʚ♡ɞ˚  </h3>
   <p><a href="https://saimassa.github.io/lesson5_activity.html/" target="_blank">Lesson 5 Mini Project</a></p>
   <p> Lesson 5 Mini Project is about designing a web page for Kiri's Restaurant based on her preferences. <br> I was given a task to decorate her website with CSS and format her menu, reviews, information inside the web page. Take a look 🎧ྀི! </p>
+  <p> a href="lesson 14/index.html" target= "_blank">Lesson 14 Mini Project</a></p>
 </body>
 </html>
