images index.html

--- a/lesson 14/index.html
+++ b/lesson 14/index.html
@@ -12,11 +12,11 @@
 
     <!-- image gallery of comic books through the years -->
     <div>
-      <img src="Batman.jpg" alt="Batman">
-      <img src="mystery-men.jpg" alt="Myster Men">
+      <img src="batman.jpg" alt="Batman">
+      <img src="mystery-men.jpg" alt="Mystery Men">
       <img src="planet-comics.jpg" alt="Planet Comics">
-      <img src="Avengers.jpg" alt="Avengers">
-      <img src="spider_man__into_the_spiderverse.jpg" alt="Into the Spiderverse">
+      <img src="avengers.jpg" alt="Avengers">
+      <img src="spider-man-into-the-spiderverse.jpg" alt="Into the Spiderverse">
     </div>
 
     <!-- image citation -->
