--- a/lesson 14/index.html
+++ b/lesson 14/index.html
@@ -12,11 +12,11 @@
 
     <!-- image gallery of comic books through the years -->
     <div>
-      <img src="batman.jpg" alt="Batman">
-      <img src="mystery-men.jpg" alt="Mystery Men">
-      <img src="planet-comics.jpg" alt="Planet Comics">
-      <img src="avengers.jpg" alt="Avengers">
-      <img src="spider-man-into-the-spiderverse.jpg" alt="Into the Spiderverse">
+      <img src="batman.jpeg" alt="Batman">
+      <img src="mystery-men.jpeg" alt="Mystery Men">
+      <img src="planet-comics.jpeg" alt="Planet Comics">
+      <img src="avengers.jpeg" alt="Avengers">
+      <img src="spider-man-into-the-spiderverse.jpeg" alt="Into the Spiderverse">
     </div>
 
     <!-- image citation -->
