div class index.html

--- a/lesson 14/index.html
+++ b/lesson 14/index.html
@@ -11,7 +11,7 @@
     <p>Welcome to the vibrant world of comic books, where art meets storytelling in extraordinary ways. For decades, comic books have captivated readers with tales of heroism, adventure, and imagination. From the golden age classics to today's graphic novels, comics have evolved, but their core mission remains the same: to tell stories that inspire, entertain, and sometimes even challenge the way we see the world.</p>
 
     <!-- image gallery of comic books through the years -->
-    <div>
+    <div class="comics">
       <img src="batman.jpeg" alt="Batman">
       <img src="mystery-men .jpeg" alt="Mystery Men">
       <img src="planet-comics.jpeg" alt="Planet Comics">
@@ -82,7 +82,7 @@
     <p>Don't forget about your supporting cast — friends, foes, and the characters in between. Each should have their distinct look and backstory, contributing to the richness of your world. As you design your characters, consider how their visual elements and backgrounds inform their motivations and development throughout the story.</p>
 
     <!-- container to control supporting cast image layout -->
-    <div>
+    <div class="cast">
       <img src="foe.png" alt="Foe supporting cast">
       <img src="friend.png" alt="Friend supporting cast">
     </div>
@@ -122,7 +122,7 @@
     <p>No matter which path you choose, the act of sharing your work is a brave step toward becoming a part of the larger comic book community.</p>
 
     <!-- container to control different ways to publish image layout -->
-    <div>
+    <div class="visuals">
       <img src="digital-comic-book.png" alt="digital comic book">
       <img src="comic-book-display.png" alt="comic book display">
       <img src="printed-comic-book.png" alt="printed comic book">
