class font index.html

--- a/lesson 14/index.html
+++ b/lesson 14/index.html
@@ -9,7 +9,7 @@
   <body>
     
     <!-- Title and Introduction -->
-    <h1>A Beginner's Guide to Comic Book Creations</h1>
+    <h1 class="font">A Beginner's Guide to Comic Book Creations</h1>
 
     <p>Welcome to the vibrant world of comic books, where art meets storytelling in extraordinary ways. For decades, comic books have captivated readers with tales of heroism, adventure, and imagination. From the golden age classics to today's graphic novels, comics have evolved, but their core mission remains the same: to tell stories that inspire, entertain, and sometimes even challenge the way we see the world.</p>
 
@@ -30,7 +30,7 @@
     <hr>
 
     <!-- steps to craft the story -->
-    <h2>✏️ Crafting Your Story ✏️</h2>
+    <h2 class="font">✏️ Crafting Your Story ✏️</h2>
 
     <img src="story-telling-process.png" alt="storytelling process">
 
@@ -57,7 +57,7 @@
     <hr>
 
     <!-- how to design the characters -->
-    <h2>🎨 Designing Your Characters 🎨</h2>
+    <h2 class="font">🎨 Designing Your Characters 🎨</h2>
 
     <p>Characters are the heart and soul of your comic book. They are the vessels through which your story is told.</p>
 
@@ -93,11 +93,11 @@
     <hr>
 
     <!-- things to think about when illustrating the comic -->
-    <h2>🖍️ Illustrating Your Comic 🖍️</h2>
+    <h2 class="font">🖍️ Illustrating Your Comic 🖍️</h2>
 
     <p> Illustration brings your story and characters to life. This stage transforms your written narrative and character designs into visual storytelling.</p>
 
-    <h3>Start by planning your comic pages.</h3>
+    <h3 class="font">Start by planning your comic pages.</h3>
 
     <!-- container to control planning images and content layout -->
     <div>
