--- a/lesson 14/index.html
+++ b/lesson 14/index.html
@@ -30,7 +30,7 @@
     <hr>
 
     <!-- steps to craft the story -->
-    <h2 class="orbitron-<orbitron>">✏️ Crafting Your Story ✏️</h2>
+    <h2 class="orbitron-<uniquifier>">✏️ Crafting Your Story ✏️</h2>
 
     <img src="story-telling-process.png" alt="storytelling process">
 
@@ -57,7 +57,7 @@
     <hr>
 
     <!-- how to design the characters -->
-    <h2 class="orbitron-<orbitron>">🎨 Designing Your Characters 🎨</h2>
+    <h2 class="orbitron-<uniquifier>">🎨 Designing Your Characters 🎨</h2>
 
     <p>Characters are the heart and soul of your comic book. They are the vessels through which your story is told.</p>
 
@@ -69,7 +69,7 @@
       </div>
       <!-- container for protagoist info -->
       <div>
-        <h3 class= "orbitron-<orbitron>">Begin with your protagonist</h3>
+        <h3 class= "orbitron-<uniquifier>">Begin with your protagonist</h3>
 
         <ul>
           <li>Who are they?</li>
@@ -93,11 +93,11 @@
     <hr>
 
     <!-- things to think about when illustrating the comic -->
-    <h2 class="orbitron-<orbitron>">🖍️ Illustrating Your Comic 🖍️</h2>
+    <h2 class="orbitron-<uniquifier>">🖍️ Illustrating Your Comic 🖍️</h2>
 
     <p> Illustration brings your story and characters to life. This stage transforms your written narrative and character designs into visual storytelling.</p>
 
-    <h3 class="orbitron-<orbitron>">Start by planning your comic pages.</h3>
+    <h3 class="orbitron-<uniquifier>">Start by planning your comic pages.</h3>
 
     <!-- container to control planning images and content layout -->
     <div>
@@ -118,7 +118,7 @@
     <hr>
 
     <!-- publishing information -->
-    <h2 class= "orbitron-<orbitron>">📖 Publishing and Sharing Your Work 🖥️</h2>
+    <h2 class= "orbitron-<uniquifier>">📖 Publishing and Sharing Your Work 🖥️</h2>
 
     <p>Sharing your comic with the world is both exciting and daunting. Today, there are more avenues than ever to publish your work. You can choose to go digital, uploading your comic to online platforms where readers from around the globe can access it.</p>
     <p>Alternatively, you might prefer the traditional route, printing physical copies to distribute in comic book shops or at conventions. Consider starting a blog or social media account dedicated to your comic, where you can engage with your audience and build a community of fans.</p>
