--- a/lesson 14/index.html
+++ b/lesson 14/index.html
@@ -9,7 +9,7 @@
   <body>
     
     <!-- Title and Introduction -->
-    <h1 class="orbitron-<orbitron>">A Beginner's Guide to Comic Book Creations</h1>
+    <h1 class="orbitron-<uniquifier>">A Beginner's Guide to Comic Book Creations</h1>
 
     <p>Welcome to the vibrant world of comic books, where art meets storytelling in extraordinary ways. For decades, comic books have captivated readers with tales of heroism, adventure, and imagination. From the golden age classics to today's graphic novels, comics have evolved, but their core mission remains the same: to tell stories that inspire, entertain, and sometimes even challenge the way we see the world.</p>
 
