--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <link rel= "stylesheet" href="style.css">
 </head>
 <body>
+   <ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#About">About</a></li>
+  <li><a href="#projects">Projects</a></li>
+  <li><a href="#resume">Resume</a></li>
+</ul>
+
   <h1> Saima's Portfolio ˚ʚ♡ɞ˚ </h1>
 <p> Hi, my name is Saima Athai. I am a sophomore at <a href="https://www.taehs.org/" target="_blank">Thomas A Edison High School </a>. I am 15 years old and my birthday falls on September 15th. ⋆｡‧˚ʚ🍓ɞ˚‧｡⋆ </p>
 <p> My CTE program is Design and Development. I am currently a member of a Cybersecurity program afterschool and strive towards key club. ˚˖𓍢ִ໋🦢˚ </p>
